# Office-Word-MCP-Server

./: .coverage  .env  .gitignore  Architecture.md  COM_INTEGRATION_SUMMARY.md  COM_INTERFACE_GUIDE.md  DEPLOYMENT.md  Dockerfile  README.md  Task.md  app.py  create_test_doc.py  debug_selector.py  docker-compose.yml  mcp-config.json  mypy.ini  package.json  pyproject.toml  pytest.ini  pyword.py  refactor.md  report.docx  requirements.txt  setup_mcp.py  smithery.yaml  test_comment_doc.docx  test_comment_tools.py  test_delete_bug.py  test_delete_fix.py  test_enhanced_value_handling.py  test_env.py  test_filter_implementation.py  test_fix.py  test_image_fix.py  test_image_tools_fix.py  test_imports.py  test_index_fix.py  test_mcp_paragraphs_info.docx  test_mcp_paragraphs_info.py  test_mcp_server.py  (+13 more)
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
docs/: ARCHITECTURE_OPTIMIZATION.md  Architecture.md  CHANGES.md  LOCATOR_OPTIMIZATION_GUIDE.md  README.md  README_COMPREHENSIVE_TOOLS.md  Task.md  agent_guide.md  auto_fixer_prompt.md  auto_test_runner_prompt.md  locator_guide.md  tdd_service.md  testing.md  tool_persistence_guide.md
tdd_service/: __init__.py  auto_fixer.py  core.py  main.py  test_runner.py
temp/: text_operations.py
test_output/: test.docx
tests/: .coveragerc  README.md  __init__.py  check_protection.py  conftest.py  create_test_doc.py  debug_comment_tools.py  debug_comments.py  requirements.txt  run_tests.py  test_app_context.py  test_com_backend.py  test_com_cache_clearing.py  test_comment.py  test_comment_tools.py  test_complex_document_operations.py  test_document.py  test_document_ops.py  test_document_structure.py  test_document_tools.py  test_e2e_integration.py  test_e2e_scenarios.py  test_get_text.py  test_get_text_from_range.py  test_image.py  test_image_tools.py  test_main.py  test_mcp_service.py  test_objects_tools.py  test_open_document_with_guide.py  test_paragraph_tools.py  test_paragraphs_details.py  test_precise_operations.py  test_range_tools.py  test_real_e2e.py  test_real_get_text.py  test_selector.py  test_shutdown_word.py  test_styles_tools.py  test_table.py  (+6 more)
tests/test_docs/: additional_test_document.docx  chinese_heading_test.docx  image_test_doc.docx  new_test_document.docx  test_document.docx  test_shutdown.docx  text_test_doc.docx  valid_test_document_v2.docx  ~$lid_test_document_v2.docx
word_document_server/: __init__.py  app.py  com_backend.py  core.py  core_utils.py  errors.py  main.py  mcp_service.py  selection.py  selector.py  word_backend.py
word_document_server/com_backend/: com_utils.py  word_backend.py
word_document_server/mcp_service/: app_context.py  core.py  core_utils.py  errors.py
word_document_server/operations/: __init__.py  comment_operations.py  comment_ops.py  document_objects_ops.py  document_operations.py  document_ops.py  element_operations.py  element_selection_ops.py  image_operations.py  image_ops.py  objects_ops.py  others_ops.py  paragraphs_ops.py  range_ops.py  styles_ops.py  table_operations.py  table_ops.py  text_format_ops.py  text_formatting.py  text_ops.py
word_document_server/selector/: LOCATOR_GUIDE.md  element_finder.py  exceptions.py  filter_handlers.py  locator_parser.py  object_finder.py  selection.py  selector.py
word_document_server/tools/: __init__.py  base_tool.py  com_document_tools.py  comment.py  comment_tools.py  content_tools.py  document.py  document_tools.py  element_tools.py  elements_tools.py  footnote_tools.py  format_tools.py  image.py  image_tools.py  objects_tools.py  protection_tools.py  quick_tools.py  range_tools.py  styles_tools.py  table.py  table_tools.py  text.py  text_tools.py  tool_imports.py
word_document_server/utils/: __init__.py  app_context.py  com_utils.py  core_utils.py  document_utils.py  errors.py  file_utils.py
word_docx_tools/: __init__.py  main.py
word_docx_tools/backend/: __init__.py
word_docx_tools/com_backend/: com_utils.py  selector_utils.py  word_backend.py
word_docx_tools/common/: exceptions.py
word_docx_tools/contexts/: __init__.py  context_builder.py  context_change_handler.py  context_control.py  context_manager.py  context_metadata.py  context_navigation.py  context_operations.py  context_search.py  context_transaction.py  context_utils.py  document_change_handler.py  metadata_processing.py  search_utils.py
word_docx_tools/core/: __init__.py  decorators.py  errors.py  server.py  utils.py  validators.py
word_docx_tools/mcp_service/: app_context.py  core.py  core_utils.py  errors.py
word_docx_tools/models/: __init__.py  context.py
word_docx_tools/operations/: __init__.py  comment_ops.py  document_ops.py  image_ops.py  navigate_tools.py  objects_ops.py  others_ops.py  paragraphs_ops.py  range_ops.py  styles_ops.py  table_ops.py  text_format_ops.py  text_operations.py  text_ops.py  view_control_ops.py
word_docx_tools/selector/: LOCATOR_GUIDE.md  exceptions.py  filter_handlers.py  locator_parser.py  object_finder.py  selection.py  selector.py
word_docx_tools/tools/: __init__.py  text_tools.py  (+13 more)
(+3 files in other folders)
