[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "directofficeword-mcp"
version = "1.1.9"
description = "MCP server for directly manipulating Microsoft Word documents via COM interface with direct Office object access"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "lichao", email = "252429238@qq.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.0",
    "pywin32>=306"
]

[project.urls]
"Homepage" = "https://example.com/directofficeword-mcp"
"Bug Tracker" = "https://example.com/directofficeword-mcp/issues"

[tool.hatch.build.targets.wheel]
only-include = [
    "word_document_server",
]
sources = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
directofficeword_mcp = "word_document_server.main:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

# 使用uv作为默认包管理器
[tool.hatch.envs.default]
installer = "uv"

dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
