[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word_docx_tools"
version = "1.0.0"
description = "MCP server for manipulating Microsoft Word documents with enhanced capabilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "lichao", email = "252429238@qq.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.0",
    "pywin32>=306"
]

[project.urls]
"Homepage" = "https://example.com/word_docx_tools"
"Bug Tracker" = "https://example.com/word_docx_tools/issues"

[tool.hatch.build.targets.wheel]
only-include = [
    "word_docx_tools",
    "tdd_service"
]
sources = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
directofficeword_mcp = "word_docx_tools.main:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

# 使用uv作为默认包管理器
[tool.hatch.envs.default]
installer = "uv"

dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

# Deployment scripts
[tool.hatch.envs.deploy]
dependencies = [
    "docker>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
# Development and deployment scripts
word_docx_tools = "word_docx_tools.main:run_server"
word_docx_tools_dev = "word_docx_tools.main:run_server"
word_docx_tools_http = "word_docx_tools.main:run_server --transport http --host 0.0.0.0 --port 8000"
word_docx_tools_tdd = "tdd_service.main:run_tdd_server"